# NewModelAlert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: providers.yaml
src/model_alert/: app.py  classifier.py  config.py  fetchers.py  healthcheck.py  heat.py  llm.py  messages.py  models.py  notifier.py  runner.py  scoring.py  settings.py  store.py  text.py
