[project]
name = "new-model-alert"
version = "0.1.0"
description = "Quiet AI model release/update/deprecation monitor with WeCom notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
]

[project.scripts]
model-alert = "model_alert.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
